# pypulsepal

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: CI.yaml
examples/: config_handler.py  pypulsepal.config  pypulsepal.config.spec  pypulsepal.config.test  run_ppp_with_config.py
pypulsepal/: __init__.py  definitions.py  models.py  pulsepal.py  utils.py  write_tests.py
