[metadata]
name = pypulsepal
version = 0.0.2.dev0
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license = GPLv3
license_files = LICENSE
description = PyPulsePal: Python API for the PulsePal open-source pulse train generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/pypulsepal
project_urls =
	Issue Tracker = https://github.com/larsrollik/pypulsepal/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GPLv3
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
	tqdm
	pybpod-api
	numpy

[options.packages.find]
where =

[options.extras_require]
dev =
	black
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit
	flake8

[options.entry_points]
console_scripts =
	pulsepal = pypulsepal.__init__:run

[options.package_data]
* = *.config

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = __init__.py,build,__pycache__,.git,tests
