[metadata]
name = pypulsepal
version = 0.1.0
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license = GPLv3
license_files = LICENSE
description = PyPulsePal: Python API for the PulsePal open-source pulse train generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/pypulsepal
project_urls =
	Issue Tracker = https://github.com/larsrollik/pypulsepal/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GPLv3
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.6
install_requires =
	pybpod-api
	numpy
	pydantic>=2.0

[options.packages.find]
where =

[options.extras_require]
dev =
	ruff
	mypy
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit

[options.entry_points]
console_scripts =
	pulsepal = pypulsepal.__init__:run

[options.package_data]
* = *.config
